<resources>
    <string name="app_name">Assignment9</string>
    <string name="label_login">Login</string>
    <string name="label_sign_in">Sign in to your account to continue</string>
    <string name="label_email">Email ID</string>
    <string name="hint_email">name@gmail.com</string>
    <string name="label_password">Password</string>
    <string name="hint_password">***********</string>
    <string name="label_forget_password">Forgot Password?</string>
    <string name="btn_text_login">Login</string>
    <string name="title_activity_plant">PlantActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_favorite">Favorite</string>
    <string name="label_flower_school">Flowers\nSchool</string>
    <string name="label_search">Search</string>
    <string name="label_error_email">Please enter email</string>
    <string name="label_error_password">Please enter password</string>
    <string name="label_okay">Okay</string>
</resources>
